警告を解消

--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -5,6 +5,8 @@ authors: [slorber]
 tags: [docusaurus]
 ---
 
+{/* truncate */}
+
 Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
 
 :::tip
