instantiate_model.mdxを修正

--- a/docs/langchain/simple-llm/instantiate_model.mdx
+++ b/docs/langchain/simple-llm/instantiate_model.mdx
@@ -6,7 +6,8 @@ title: モデルをインスタンス化
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-ソースによると、LangChainで提供されている様々なチャットモデルをインスタンス化するコードは、使用するモデルによって異なります。以下は、ソースで示されている各チャットモデルのインスタンス化コードとその解説です。
+ソースによると、LangChainで提供されている様々なチャットモデルをインスタンス化するコードは、使用するモデルによって異なります。
+以下は、ソースで示されている各チャットモデルのインスタンス化コードとその解説です。
 
 <Tabs>
   <TabItem value="OpenAI" label="OpenAI" default>
